# python-huaweivbsclient

./: .gitignore  AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: 中文_快速入门文档.md
huaweivbsclient/: __init__.py  cli.py  client_v1.py  exceptions.py  osc_plugin.py  utils.py
huaweivbsclient/tests/functional/: test_cli.py
