[metadata]
name = huaweivbsclient
version = 1.0.0
summary = Hua Wei Cloud CLI
license = Apache License, Version 2.0
author = Mike Drew
author-email = mikedrew@foxmail.com
home-page = https://git.oschina.net/mikedrew/osc
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    huaweivbsclient

[entry_points]
openstack.cli.extension =
    huaweivbs = huaweivbsclient.osc_plugin

openstack.huaweivbs.v1 =
    backup create = huaweivbsclient.cli:BackupCreate
    backup delete = huaweivbsclient.cli:BackupDelete
    backup restore = huaweivbsclient.cli:BackupRestore
    backup job status = huaweivbsclient.cli:BackupQueryStatus
